export enum VVEStatus {
  Waiting = 'Waiting',
  InProgress = 'InProgress',
  Departing = 'Departing',
  Concluded = 'Concluded',
}
