export interface IVVEDTO {
  code?: number;
  vvnCode: number;
  vesselImo: string;
  arrivalTime: Date;
  creatorUserEmail: string;
  status?: string;
  dockCode: string;
  notes?: string[];
  updatedAt?: Date;
}
